infisical/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical
  labels:
    app: infisical
    environment: infrastructure
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
