infisical/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infisical
  namespace: infisical
  labels:
    app: infisical
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infisical
  template:
    metadata:
      labels:
        app: infisical
    spec:
      containers:
        - name: infisical
          image: infisical/infisical:v0.165.6
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            httpGet:
              path: /api/status
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            failureThreshold: 120
            initialDelaySeconds: 25
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/status
              port: 8080
            periodSeconds: 15
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/status
              port: 8080
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              cpu: 400m
              memory: 1200Mi
            limits:
              cpu: 1200m
              memory: 2400Mi
