infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical
  namespace: infisical
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  type: ClusterIP
  selector:
    app: infisical
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
